# TreeCrownSegmentation

./: .gitignore  README.md  pyproject.toml
app/: build_vectorstore.py  inference.py  rag_report.py  streamlit_app.py
configs/: base.yaml  segformer.yaml
notebooks/: data_eda_rgb_hsi.ipynb  hsi_3dcnn_segmentation.ipynb  hsi_vit_unet.ipynb  inference.ipynb  inference_hsi_vs_rgb_comparison.ipynb  splits.ipynb
scripts/: convert_segformer_to_pth.py  hsi_preprocessor.py  patch_extractor.py  train_hsi_3dcnn.py  train_hsi_vit.py  train_rgb_unet.py  train_rgb_vit.py  train_segformer.py
scripts/slurm/: common.sh  data_pipeline.sh  train_all_models.sh  train_hsi_3dcnn.sh  train_hsi_vit.sh  train_rgb_unet.sh  train_rgb_vit.sh  train_segformer.sh
src/neon_tree_crown/: __init__.py
src/neon_tree_crown/data/: cleaner.py  datasets.py  hsi_augmentation.py  splitter.py
src/neon_tree_crown/models/: attention_unet.py  hsi_3dcnn.py  losses.py  segformer.py  vit_unet.py
src/neon_tree_crown/training/: engine.py  train_hsi_3dcnn.py  train_hsi_vit.py  train_rgb_unet.py  train_rgb_vit.py  train_segformer.py  wandb_utils.py
src/neon_tree_crown/utils/: config.py  metrics.py
tests/: test_models.py
